Change primitive wrapper constructors to valueOf
Fixes #37